--- a/index.html
+++ b/index.html
@@ -282,6 +282,21 @@
             <div class="contenido-section"></div>
             <div class="fila">
                 <div class="col">
+	
+	
+	<form>
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre"><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="correo@example.com"><br><br>
+
+        <label for="mensaje">Mensaje:</label><br>
+        <textarea id="mensaje" name="mensaje" rows="4" cols="30" placeholder="Escribe tu mensaje aquí"></textarea><br><br>
+
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Limpiar">
+    </form>
                     <div class="info">
                         <h2>Animo!! UwU</h2>
                         <P>Av. Teoloyucan Manzana 001, San Sebastian Xhala, 54840 Cuautitlán Izcalli, Méx.</P>
